# Contourforge

./: .gitignore  ARCHITECTURE.md  BUILD.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  PROJECT_COMPLETION_REPORT.md  README.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.3.0.md
data/fonts/: README.md
data/heightmaps/: README.md  generate_test_images.py
docs/: API.md  DEVELOPER_GUIDE.md  FORMAT_SUPPORT.md  LABEL_SYSTEM.md  LOD_SYSTEM.md  PERFORMANCE.md  PERFORMANCE_COMPARISON_v0.2.0.md  THREADING.md  THREADING_IMPLEMENTATION_REPORT.md  USER_GUIDE.md
examples/: CMakeLists.txt  README.md  format_converter.c  heightmap_loader.c  interactive_editor.c  label_demo.c  lod_demo.c  simple_viewer.c  threading_benchmark.c
include/contourforge/: contourforge.h  control.h  core.h  datagen.h  rendering.h  threading.h  types.h
shaders/: README.md  basic.frag  basic.vert  line.frag  line.vert  text.frag  text.vert
src/control/: CMakeLists.txt  editor.c  input.c  selection.c
src/core/: CMakeLists.txt  data_structures.c  lod_generator.c  lod_parallel.c  memory.c  octree.c  thread_pool.c  version.c
src/datagen/: CMakeLists.txt  contour.c  contour_parallel.c  format_detect.c  heightmap.c  raw_loader.c  simplify.c  simplify_parallel.c  tiff_loader.c  topology.c
src/rendering/: CMakeLists.txt  buffer.c  camera.c  label.c  label_placement.c  mesh.c  renderer.c  shader.c  text_renderer.c
tests/: CMakeLists.txt  test_contour.c  test_core.c  test_datagen.c  test_formats.c  test_label.c  test_lod.c  test_memory.c  test_octree.c  test_simplify.c  test_threading.c
